--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -813,35 +813,19 @@ config PANEL_BOOT_MESSAGE
 	  An empty message will only clear the display at driver init time. Any other
 	  printf()-formatted message is valid with newline and escape codes.
 
-config UID_SYS_STATS
-	bool "Per-UID statistics"
-	depends on PROFILING && TASK_XACCT && TASK_IO_ACCOUNTING
+config BATTERY_SAVER
+	bool "Battery saver mode for kernelspace"
+	default y
 	help
-	  Per UID based cpu time statistics exported to /proc/uid_cputime
-	  Per UID based io statistics exported to /proc/uid_io
-	  Per UID based procstat control in /proc/uid_procstat
+	  This driver creates a sysfs toggle that can be enabled when
+	  battery saver mode is activated in userspace, and provides
+	  functions to check the status of battery saver and to activate
+	  it from anywhere in the kernel.
 
-config UID_SYS_STATS_DEBUG
-	bool "Per-TASK statistics"
-	depends on UID_SYS_STATS
-	default n
-	help
-	  Per TASK based io statistics exported to /proc/uid_io
+	  The former can be used to disable features that may otherwise
+	  drain battery faster, such as CPU and DDR boosting.
 
-config MEMORY_STATE_TIME
-	tristate "Memory freq/bandwidth time statistics"
-	depends on PROFILING
-	help
-	  Memory time statistics exported to /sys/kernel/memory_state_time
-
-config QPNP_MISC
-	tristate "QPNP Misc Peripheral"
-	depends on MFD_SPMI_PMIC
-	help
-	  Say 'y' here to include support for the QTI QPNP MISC
-	  peripheral. The MISC peripheral holds the USB ID interrupt
-	  and the driver provides an API to check if this interrupt
-	  is available on the current PMIC chip.
+	  If in doubt, say Y.
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
