--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -56,16 +56,7 @@ obj-$(CONFIG_ECHO)		+= echo/
 obj-$(CONFIG_VEXPRESS_SYSCFG)	+= vexpress-syscfg.o
 obj-$(CONFIG_CXL_BASE)		+= cxl/
 obj-$(CONFIG_PANEL)             += panel.o
-obj-$(CONFIG_QPNP_MISC) 	+= qpnp-misc.o
-obj-$(CONFIG_FPR_FPC) 	+= fpr_FingerprintCard/
-obj-$(CONFIG_MEMORY_STATE_TIME)	+= memory_state_time.o
-
-obj-$(CONFIG_UID_SYS_STATS)	+= uid_sys_stats.o
-obj-$(CONFIG_MEMORY_STATE_TIME)	+= memory_state_time.o
-obj-$(CONFIG_QCOM_XR_SMRTVWR_MISC) += qcom-xr-smrtvwr-misc.o
-obj-$(CONFIG_TUSB1064_XR_MISC) += tusb1064.o
-obj-$(CONFIG_VXR200_XR_MISC) += vxr7200.o
-
+obj-$(CONFIG_BATTERY_SAVER)	+= battery_saver.o
 
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_core.o
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_bugs.o
