--- a/arch/arm64/configs/cuttlefish_defconfig
+++ b/arch/arm64/configs/cuttlefish_defconfig
@@ -9,6 +9,7 @@ CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_PSI=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
+CONFIG_LLVM_POLLY=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CPUSETS=y
 # CONFIG_PROC_PID_CPUSET is not set
