--- a/arch/arm64/configs/lineageos_RMX1851_defconfig
+++ b/arch/arm64/configs/lineageos_RMX1851_defconfig
@@ -84,6 +84,7 @@ CONFIG_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
+CONFIG_BOEFFLA_WL_BLOCKER=y
 # CONFIG_PM_WAKELOCKS_GC is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_SCHEDUTIL is not set
 CONFIG_CPU_IDLE=y
