--- a/arch/arm64/configs/lineageos_RMX1851_defconfig
+++ b/arch/arm64/configs/lineageos_RMX1851_defconfig
@@ -242,6 +242,9 @@ CONFIG_NET_ACT_MIRRED=y
 CONFIG_NET_ACT_SKBEDIT=y
 CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
+CONFIG_RMNET_USB=y
+CONFIG_QRTR_USB=y
+CONFIG_QRTR_ETHERNET=y
 CONFIG_RMNET_DATA_DEBUG_PKT=y
 CONFIG_SOCKEV_NLMCAST=y
 CONFIG_BT=y
