--- a/arch/arm64/configs/lineageos_RMX1851_defconfig
+++ b/arch/arm64/configs/lineageos_RMX1851_defconfig
@@ -601,6 +601,7 @@ CONFIG_OPPO_DEVICE_IFNO=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_ARM_MEMLAT_MON=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_QCOMCCI_HWMON=y
 CONFIG_QCOM_M4M_HWMON=y
 CONFIG_DEVFREQ_GOV_QCOM_BW_HWMON=y
