--- a/arch/arm64/configs/lineageos_RMX1851_defconfig
+++ b/arch/arm64/configs/lineageos_RMX1851_defconfig
@@ -47,6 +47,7 @@ CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
+CONFIG_IOSCHED_ANXIETY=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_ARCH_QCOM=y
