--- a/arch/arm64/configs/lineageos_RMX1851_defconfig
+++ b/arch/arm64/configs/lineageos_RMX1851_defconfig
@@ -87,6 +87,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_BATTERY_SAVER=y
 # CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_QUICK_WAKEUP=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
