--- a/arch/arm64/configs/lineageos_RMX1851_defconfig
+++ b/arch/arm64/configs/lineageos_RMX1851_defconfig
@@ -97,6 +97,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_BOOST=y
+CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_NET=y
 CONFIG_PACKET=y
